--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,40 @@
+:root {
+  --gray: hsl(197, 10%, 45%);
+  --middle-gray: hsl(240, 6%, 92%);
+  --light-gray: hsl(240, 6%, 97%);
+  --accent: hsl(197, 100%, 44%);
+  --accent-hover: hsl(197, 100%, 40%);
+  --accent-active: hsl(197, 100%, 35%);
+  --focus-shadow: 0px 0px 2px var(--accent);
+  --focus-border: solid 1px var(--accent);
+  --focus-border-inactive: solid 1px transparent;
+  --max-width: 1000px;
+  --transparent-white: hsla(0, 100%, 100%, 1);
+  --red: rgb(249, 73, 73);
+  --green: hsl(170, 90%, 44%);
+}
+
+body {
+  color: var(--gray);
+}
+
+[data-reach-dialog-overlay] {
+  background: none;
+}
+
+[data-reach-dialog-content] {
+  box-shadow: 1px 1px 30px hsla(0, 0%, 0%, 0.15);
+  border: solid 2px hsla(240, 6%, 70%);
+  border-radius: 0.8rem;
+  width: 800px;
+  padding: 2.5rem;
+}
+
+.home {
+  margin: 0 2rem;
+  width: 800px;
+}
+
 .App {
   text-align: center;
 }
