--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ header {
 
 .home {
   margin: 0 2rem;
-  width: 800px;
+  padding: 1rem 10rem;
 }
 .navbar {
   border-radius: 0;
@@ -93,7 +93,7 @@ header {
 
 .App-header {
   background-color: var(--cool-green);
-  min-height: 100vh;
+  min-height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -112,5 +112,94 @@ header {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* .thumbnail {
+  border: none;
+  text-align: center;
+  background-color: white;
+  padding: 35px 10px 25px 10px;
+  height: 370px;
+  margin: 10px -5px;
+} */
+
+.history-item {
+  background-size: cover;
+  background-position: center;
+  height: 370px;
+  width: 370px;
+  margin: 8px 25px;
+  border: 5px solid rgb(241, 241, 241);
+  border-radius: 3px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  cursor: pointer;
+  border-radius: 50%;
+
+}
+
+.history-item:hover {
+  transform: scale(1.05);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transition: 0.1s;
+}
+
+/* TODO: Forgot what I was doing with this. Supposed to be container if the Images don't show up  */
+.HistoryItemsShimmer {
+  padding: 2rem;
+  border-top: 1px solid var(--middle-gray);
+  height: 16rem;
+  background: #f6f7f8;
+  background-image: linear-gradient(
+    to right,
+    #f6f7f8 0%,
+    #edeef1 20%,
+    #f6f7f8 40%,
+    #f6f7f8 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 120% 100%;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+}
+
+
+
+.shake {
+  animation: shake .5s 0.0125s;
+}
+
+@keyframes shake {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  12.5%,
+  37.5%,
+  62.5%,
+  87.5% {
+    transform: translate(-10px);
+  }
+
+  25%,
+  50%,
+  75% {
+    transform: translate(10px);
+  }
+}
+
+@media (max-width: 750px) {
+  .history-item {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  .history-item {
+    margin: 10px;
   }
 }
