--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
-  --cool-green: rgb(24,188,156);
-  --boot-purple: rgb(121,82,179);
+  --cool-green: #56bcbf;
+  --boot-purple: #5856bf;
+  --nice-green: #56bf5a;
   --gray: hsl(197, 10%, 45%);
   --middle-gray: hsl(240, 6%, 92%);
   --light-gray: hsl(240, 6%, 97%);
@@ -50,12 +51,28 @@ header {
   border-radius: 0;
 
 }
+.navbar-brand {
+  color: white;
+}
 
 .nav-link {
   color: white;
 }
 
+.edNav {
+  background-color: #5856bf;
+}
 
+.edPage {
+  height: 100vh;
+}
+
+.sideNav {
+  color: white;
+}
+.right {
+  color: white;
+}
 .historyContainer {
   display: flex;
   min-height: 80%;
@@ -65,6 +82,24 @@ header {
   padding-bottom: 50px;
   width: 90%;
   margin: 0 auto;
+}
+
+.history-item {
+  position: relative;
+
+}
+
+#title {
+  position: absolute;
+  top: 50%;
+
+  width: 100%;
+  margin: auto 0;
+  color: var(--nice-green);
+  font-weight: 500;
+}
+#title h3 {
+  text-align: center;
 }
 
 @media (min-width: 1100px) {
@@ -81,6 +116,10 @@ header {
 }
 
 .App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+.ed-logo {
   height: 40vmin;
   pointer-events: none;
 }
