--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ header {
   border-radius: 3px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   cursor: pointer;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 
 }
 
